--- a/app/print.css
+++ b/app/print.css
@@ -35,7 +35,7 @@
         display: flex !important;
         flex-direction: row !important;
         flex-wrap: wrap !important;
-        gap: 0.5rem !important; /* reduced from 2rem */
+        gap: 0.5rem !important;
         justify-content: space-between !important;
         padding: 0 !important;
         font-size: 10pt !important;
@@ -109,6 +109,7 @@
     ul,
     ol {
         padding-left: 1.5rem !important;
+        font-size: 10pt !important;
     }
 
     /* Remove any borders except the header */
@@ -119,6 +120,18 @@
     /* Hide scrollbars and other screen-only elements */
     ::-webkit-scrollbar {
         display: none !important;
+    }
+
+    [data-print-header-title] {
+        font-size: 3em !important;
+        line-height: 1em !important;
+        margin: 0 !important;
+        padding: 0 !important;
+    }
+
+    [data-print-header-subtitle] {
+        font-size: 1.5em !important;
+        line-height: 1em !important;
     }
 
     [data-print-skill-block] {
