--- a/app/print.css
+++ b/app/print.css
@@ -125,7 +125,7 @@
     [data-print-header-title] {
         font-size: 3em !important;
         line-height: 1em !important;
-        margin: 0 !important;
+        margin-top: -2rem !important;
         padding: 0 !important;
     }
 
